# keymeld

./: .env.example  .envrc  .gitignore  Cargo.toml  README.md  docker-compose.yml  flake.nix  justfile
.cargo/: audit.toml  config.toml
crates/keymeld-core/: Cargo.toml
crates/keymeld-core/src/: api.rs  crypto.rs  encrypted_data.rs  identifiers.rs  lib.rs  logging.rs  musig.rs  protocol.rs  resilience.rs  validation.rs
crates/keymeld-core/src/enclave/: client.rs  distribution.rs  manager.rs  mod.rs  pool.rs  protocol.rs
crates/keymeld-core/src/managed_socket/: client.rs  config.rs  connection.rs  metrics.rs  mod.rs  pool.rs  transport.rs
crates/keymeld-core/src/managed_vsock/: client.rs  connection.rs  mod.rs  pool.rs
crates/keymeld-core/src/musig/: error.rs  mod.rs  nonces.rs  processor.rs  session.rs  signatures.rs  types.rs
crates/keymeld-core/src/session/: mod.rs  types.rs  validation.rs
crates/keymeld-enclave/: Cargo.toml
crates/keymeld-enclave/src/: lib.rs  main.rs  operator.rs  queue.rs  server.rs  state.rs  state_dispatch.rs
crates/keymeld-enclave/src/attestation/: mod.rs  nsm.rs
crates/keymeld-enclave/src/musig/: error.rs  mod.rs  nonces.rs  processor.rs  session.rs  signatures.rs  types.rs
crates/keymeld-enclave/src/operations/: context.rs  context_aware_session.rs  enclave_context.rs  errors.rs  keygen_data.rs  mod.rs  session_context.rs  user_key_handler.rs  user_key_store.rs
crates/keymeld-gateway/: Cargo.toml  build.rs
crates/keymeld-gateway/.sqlx/: query-014f57a0afad8cd8b9da0e5d47a1f131c0c98f376c67e18cafa44086093a8a1c.json  query-05d081742f5223771ee309eac2953f4a4585aecb5752130e05a6019544997cab.json  query-0c0c873f2f822f8c488db4101c353819534a9c98de185f3526e7a9417ee37ce5.json  query-0f9c0fb3c7708331eabcfdd30c1dcdd5122511b4ca82dc1a770c9e359b0bc1c0.json  query-114b4568ba5dd8d67029261bae4899f640e3f2775617ebcc821a259b3d0bd953.json  query-117f2477ad8dcd5266580f1ecaa037feea1a5569d2854bab5a3db6af04c2ba3a.json  query-17030666e49e3a909a93430243816a229c158856e64cd36cb3abc69e493f10c5.json  query-1c261b8f0f753cf2e6fd6130144a454c063357da61302be9ef3ad8ef0a920c4b.json  query-1f09bc066a9ec75a826a48727bb2e892b90e8867d876e2880fc2cf18017ccda2.json  query-29d62626e0201304a4cc09773cec2a695870b2ccc97adb07a3842185bb6ee517.json  query-307651dbc216c27109bc9e1814e8e4477fcf3bac140241c205a076738a1d8289.json  query-31795d6baadb56d34a08a22529f335b086fb93bcb35e7d961d27ecaf3ad00e43.json  query-3c7b5b4afadac415457118354e4f68dc65295f52540fb46475527947fa10e62f.json  query-5932d7f26b669922d2d4a6917a5cfff0ee87bfd19ef33f360d6bf2254f1624e7.json  query-59d0db2786f5adf7ba2878bf4ce3bd5c5da37938776589ced005b1d3c4fb05ef.json  query-643b88a963f15e36881268c82f37e3f832a120568ca515f7052b54f03fd5b269.json  query-7083edc6746fc9a5766edbdda12bd9550adef6bd9d3d7a7878ba9158e6f4a722.json  query-70dfb3ded4ba2b85ecc50adbc3bd31c44e520601e62fa5907d68ad1297c7e25d.json  query-719a9c7fbc0cb0263f8c315e1b33345be264c3d3236b53a083b9ba101a4be54b.json  query-8733f110e1f7045f7fe12b4ee860292e4b6b626efe6c08a850b2f485de1af4ec.json  query-9802b087716ac4f0a6f4989a578b1fbc51339ae5ba8f0e18f7002fa4709a18ed.json  query-9d263d87c2890d0705a66aafc88958929fc667cd54c60a8f13e1af62f3b469ea.json  query-a08ed0cc75b4e4d594d44cfaac90c0cc55276c0682dd3ec6314ef47a2f63d2ef.json  query-a1888b08b87aa81efa740b670f49392edda6c9c9c78f7fe4ef1a75db1cc8be97.json  query-acd2c5d46ecfa3e4600da393b905f1bc5a9a9cb52a68e45aaea9f1ddd435d1e9.json  query-b7be2841cd7fe7d1dab4f810d6b9c1ff86216a819c676acf68e22df314fec9a4.json  query-b97f5004855a311cadb87bb82bf6b20c413f7855102e02e04b3c920986285346.json  query-be0f39bcafcfa9d78959618d4527844a09452fe210eee0376b9a1be9538780be.json  query-c568d19545aa826d58a4ddd0b096cfd022c1ea57de46c45d6b831c7eaf586c7e.json  query-c8a1abb99373f7f0c7d828143c1f58ff8f35cf01f3b9ea66367c222b7124726c.json  query-ca09631366cc9a33bfcdacee8c862fe2cb4d7906feca4551a25cc37bd3fc1802.json  query-d86bb22d7d00c110906d2d6ea1ef157644a91be654b2ad4737897e1539ae9edf.json  query-d87e05997970664acc434100d9c8547e8a832fdad0ec513c1156bb550eaaac52.json  query-e5b2a1a1a897c9de13e7e48fbf04b6faa20283d15efb36c24a6f0a7ee9797870.json  query-ea8756c9dbb9ae9de7252b7764bb162631453b44d5a0709ef00d9770b753f95d.json  query-f05d5b56dbcfc4b1c16937afba049af7bec4501a26bc0b4f4e262e067ca598b5.json  query-f3ea8e0a63245b467b3ebe9eda2e9edd2f77ed2d9a4573eddfd1335b3588a41c.json
crates/keymeld-gateway/migrations/: 20251014193038_init_schema.sql  20251107191320_add_keygen_participants.sql  20251109154401_init_structured_schema.sql  20251121000000_add_participant_public_key.sql  20260320000000_add_restoration_failed.sql
crates/keymeld-gateway/src/: auth.rs  config.rs  coordinator.rs  database.rs  encrypted_data.rs  errors.rs  handlers.rs  headers.rs  kms.rs  lib.rs  main.rs  metrics.rs  middleware.rs  startup.rs
crates/keymeld-gateway/src/enclave/: distribution.rs  manager.rs  mod.rs
crates/keymeld-gateway/src/routes/: mod.rs
crates/keymeld-gateway/src/session/: mod.rs  types.rs  validation.rs
crates/keymeld-gateway/src/templates/: mod.rs
crates/keymeld-gateway/static/: loader.js  styles.css
crates/keymeld-sdk/: Cargo.toml
crates/keymeld-sdk/src/: client.rs  config.rs  dlctix.rs  error.rs  lib.rs  polling.rs
crates/keymeld-sdk/src/credentials/: mod.rs  session.rs  user.rs
crates/keymeld-sdk/src/http/: client.rs
crates/keymeld-sdk/src/managers/: health.rs  keygen.rs  mod.rs  signing.rs  single_signer.rs
crates/keymeld-sdk/src/types/: mod.rs
examples/: Cargo.toml  README.md  adapter_success.txt  config.yaml.example  regular_success.txt  success.txt
examples/src/: adaptor.rs  adaptor_utils.rs  batch_signing.rs  dlctix.rs  dlctix_batch.rs  keygen_with_stored_key.rs  keymeld_adaptor.rs  keymeld_adaptor_test.rs  keymeld_example.rs  keymeld_plain.rs  lib.rs  main.rs  plain.rs  rpc_batcher.rs  session_restore_test.rs  session_restore_test_main.rs  single_signer.rs  stored_key.rs
examples/src/harness/: adaptor_utils.rs  mod.rs  rpc_batcher.rs  test.rs
examples/success/: adapter_success.txt  dlctix_success.txt  regular_success.txt  single_signer_success.txt
(+154 files in other folders)
