[workspace]
members = [
    "crates/keymeld-core",
    "crates/keymeld-gateway",
    "crates/keymeld-enclave",
    "crates/keymeld-sdk",
    "examples"]
resolver = "2"

[workspace.lints.clippy]
uninlined_format_args = "allow"

[workspace.metadata.crane]
name = "keymeld"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["tee8z <tee8z@protonmail.com>"]
license = "MIT"
repository = "https://github.com/tee8z/keymeld"
description = "distributed MuSig2 signing system for AWS Nitro Enclaves"
keywords = ["bitcoin", "musig2", "enclaves", "distributed", "signing"]
categories = ["cryptography", "network-programming"]

[workspace.dependencies]
keymeld-core = { path = "crates/keymeld-core" }
keymeld-enclave = { path = "crates/keymeld-enclave" }
musig2 = { version = "0.3.1", features = ["serde"] }
secp256k1 = { version = "0.31.0", features = ["rand", "serde", "global-context"] }
bitcoin = { version = "0.32.8", features = ["serde"] }
bitcoin_hashes = "0.19.0"
tokio = { version = "1.49.0" }
tokio-vsock = "0.7.2"
async-trait = "0.1.83"
axum = { version = "0.8.8", features = ["ws", "macros"] }
tower = { version = "0.5.3", features = ["full"] }
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
hyper = "1.7.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0.149"
serde_cbor = "0.11"
bincode = "1.3.3"
thiserror = "2.0.18"
anyhow = "1.0.100"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
log = "0.4.22"
chacha20poly1305 = "0.10.1"
rand = "0.9.2"
aes-gcm = "0.10.3"
hkdf = "0.12.4"
zeroize = { version = "1.8.1", features = ["derive"] }
sha2 = "0.10.8"
hex = "0.4.3"
reqwest = { version = "0.13.1", default-features = false, features = ["json", "rustls"] }
reqwest-middleware = "0.4.2"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite", "uuid", "time", "migrate"] }
uuid = { version = "1.11", features = ["v7", "serde"] }
time = { version = "0.3", features = ["serde", "macros", "formatting", "parsing"] }
config = "0.15.19"
aws-config = "1.8.7"
dashmap = "6.1.0"
futures = "0.3.30"
moka = { version = "0.12", features = ["sync"] }

# Dev-only dependencies (used only in [dev-dependencies] sections)
mockito = "1.6.1"
proptest = "1.5.0"
tempfile = "3.15.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.enclave]
inherits = "release"
panic = "abort"
opt-level = "z"  # Optimize for size
strip = true
lto = true
codegen-units = 1
