[package]
name = "keymeld-examples"
version = "0.1.0"
edition = "2021"
authors = ["tee8z@protonmail.com"]
description = "Examples for using KeyMeld with Bitcoin development kit"

[lib]
name = "keymeld_examples"
path = "src/lib.rs"

[[bin]]
name = "keymeld_demo"
path = "src/main.rs"








[dependencies]
keymeld-core = { path = "../crates/keymeld-core" }
bdk_wallet = { version = "1.0.0-beta.4", features = ["keys-bip39"] }
bdk_bitcoind_rpc = { version = "0.22.0" }
bitcoin = { version = "0.32", features = ["serde", "rand", "std"] }
bitcoin_hashes = "0.14"
secp256k1 = { workspace = true }
musig2 = { version = "0.3.1", features = ["serde"] }
tokio = { version = "1.47", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
hex = "0.4"
uuid = { version = "1.11", features = ["v7", "serde"] }
rand = "0.9.2"
rand_chacha = "0.9.0"
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.0", features = ["derive"] }
aws-config = "1.8.7"
aws-sdk-kms = "1.83.0"
serde_cbor = "0.11.2"
time = "0.3"
hmac = "0.12"
sha2 = "0.10"

[dev-dependencies]
tempfile = "3.15"
