[package]
name = "keymeld-examples"
version = "0.1.0"
edition = "2021"
authors = ["tee8z@protonmail.com"]
description = "Examples for using KeyMeld with Bitcoin development kit"

[lib]
name = "keymeld_examples"
path = "src/lib.rs"

[[bin]]
name = "keymeld_demo"
path = "src/main.rs"

[[bin]]
name = "keymeld_session_test"
path = "src/session_restore_test_main.rs"


[dependencies]
keymeld-sdk = { path = "../crates/keymeld-sdk" }
bdk_wallet = { version = "2.3.0", features = ["keys-bip39"] }
bdk_bitcoind_rpc = { version = "0.22.0" }
bitcoin = { workspace = true, features = ["serde", "rand", "std"] }
bitcoin_hashes = { workspace = true }
secp256k1 = { workspace = true }
musig2 = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
uuid = { workspace = true }
time = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
clap = { version = "4.0", features = ["derive"] }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
