[package]
name = "keymeld-core"
version = "0.1.0"
edition = "2021"
authors = ["tee8z@protonmail.com"]
description = "Core library for MuSig2 signature generation in AWS Nitro Enclaves"
license = "MIT"

[dependencies]
musig2 = { workspace = true }
secp256k1 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_cbor = { workspace = true }
bincode = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros", "sync", "io-util", "net"] }
tokio-vsock = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rand = { workspace = true }
zeroize = { workspace = true }
sha2 = { workspace = true }
hkdf = { workspace = true }
aes-gcm = { workspace = true }
hex = { workspace = true }
subtle = "2.5.0"
uuid = { workspace = true }
time = { workspace = true }
dashmap = { workspace = true }
utoipa = { version = "5.4.0", features = ["uuid"], optional = true }
sqlx = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true }

[features]
default = ["gateway"]
gateway = ["sqlite", "openapi"]
enclave = []
openapi = ["utoipa"]
sqlite = ["sqlx"]

[lints]
workspace = true
