[package]
name = "keymeld-core"
version = "0.1.0"
edition = "2021"
authors = ["tee8z@protonmail.com"]
description = "Core library for MuSig2 signature generation in AWS Nitro Enclaves"
license = "MIT"

[dependencies]
musig2 = { workspace = true }
secp256k1 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_cbor = { workspace = true }
bincode = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rand = { workspace = true }
zeroize = { workspace = true }
sha2 = { workspace = true }
hkdf = { workspace = true }
aes-gcm = { workspace = true }
hex = { workspace = true }
subtle = "2.5.0"
uuid = { workspace = true }
time = { workspace = true }
dashmap = { workspace = true }
utoipa = { version = "5.4.0", features = ["uuid"], optional = true }
sqlx = { workspace = true, optional = true }

# Networking dependencies - not available on WASM
tokio = { workspace = true, features = ["rt", "macros", "sync", "io-util", "net"], optional = true }
tokio-vsock = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true }

[features]
default = ["gateway"]
gateway = ["sqlite", "openapi", "networking"]
enclave = ["networking"]
openapi = ["utoipa"]
sqlite = ["sqlx"]
# Networking feature enables tokio and managed_socket module
# Disable this for WASM builds
networking = ["tokio", "tokio-vsock"]

[lints]
workspace = true
