[package]
name = "keymeld-core"
version = "0.1.0"
edition = "2021"
authors = ["tee8z@protonmail.com"]
description = "Core library for MuSig2 signature generation in AWS Nitro Enclaves"
license = "MIT"

[dependencies]
musig2 = { workspace = true }
secp256k1 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_cbor = { workspace = true }
bincode = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rand = { workspace = true }
zeroize = { workspace = true }
sha2 = { workspace = true }
hkdf = { workspace = true }
aes-gcm = { workspace = true }
hex = { workspace = true }
subtle = "2.5.0"
uuid = { workspace = true }
time = { workspace = true }
dashmap = { workspace = true }
utoipa = { version = "5.4.0", features = ["uuid"], optional = true }
sqlx = { workspace = true, optional = true }

# Networking dependencies - not available on WASM
tokio = { workspace = true, features = ["rt", "macros", "sync", "io-util", "net"], optional = true }
tokio-vsock = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true }

[features]
default = ["gateway"]
gateway = ["sqlite", "openapi", "networking"]
enclave = ["networking"]
openapi = ["utoipa"]
sqlite = ["sqlx"]
# Networking feature enables tokio and managed_socket module
# Disable this for WASM builds
networking = ["tokio", "tokio-vsock"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
# getrandom 0.2 (used by crypto deps like aes-gcm) needs "js" feature for WASM
getrandom = { version = "0.2", features = ["js"] }
# getrandom 0.3 (used by rand 0.9) needs "wasm_js" feature for WASM
getrandom_03 = { package = "getrandom", version = "0.3", features = ["wasm_js"] }
wasm-bindgen = "0.2"

[lints]
workspace = true

[package.metadata.cargo-machete]
# These are WASM target-specific dependencies that enable proper random number
# generation and JS interop. cargo-machete doesn't detect their usage because
# they're only compiled for wasm32 targets.
ignored = ["getrandom", "getrandom_03", "wasm-bindgen"]
