[package]
name = "keymeld-enclave"
version = "0.1.0"
edition = "2021"
authors = ["tee8z@protonmail.com"]
description = "Enclave runtime for KeyMeld - runs inside AWS Nitro Enclaves"
license = "MIT"

[dependencies]
keymeld-core = { path = "../keymeld-core", features = ["enclave"] }
musig2 = { version = "0.3.1", features = ["secp256k1", "rand", "serde"] }
sha2 = { version = "0.10", default-features = false }
hmac = "0.12.1"
axum = { version = "0.8", features = ["macros"] }
tower = { version = "0.5.2" }
hyper = "1.7.0"
tokio = { version = "1.47.1", features = ["full"] }
tokio-vsock = "0.5.0"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
serde_cbor = "0.11"
serde_bytes = "0.11"
bincode = "1.3.3"
aws-nitro-enclaves-nsm-api = "0.4"
aws-nitro-enclaves-cose = "0.5"
async-trait = "0.1"
nix = "0.27"
libc = "0.2"
hex = "0.4.3"
aws-config = "1.8.7"
aws-sdk-kms = "1.83.0"
zeroize = { version = "1.8.1", features = ["derive"] }
thiserror = "2.0.16"
anyhow = "1.0.95"
rand = { version = "0.9.2", default-features = false, features = ["std_rng"] }
rand_core = "0.9.3"
aes-gcm = "0.10.3"
hkdf = "0.12.4"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
log = "0.4.22"
time = { version = "0.3", features = ["serde", "macros", "formatting"] }
reqwest = { version = "0.12.9", features = ["json", "rustls-tls"] }
uuid = { version = "1.11", features = ["v7"] }
dashmap = "5.5.3"
lazy_static = "1.4"

[features]
default = []



[[bin]]
name = "keymeld-enclave"
path = "src/main.rs"
