[package]
name = "keymeld-enclave"
version = "0.1.0"
edition = "2021"
authors = ["tee8z@protonmail.com"]
description = "Enclave runtime for KeyMeld - runs inside AWS Nitro Enclaves"
license = "MIT"

[dependencies]
keymeld-core = { path = "../keymeld-core", features = ["enclave"] }
musig2 = { workspace = true }
secp256k1 = { workspace = true }

tokio = { workspace = true, features = ["full"] }
tokio-vsock = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_cbor = { workspace = true }
serde_bytes = "0.11"
aws-nitro-enclaves-nsm-api = "0.4"
aws-nitro-enclaves-cose = "0.5"
aws-config = { workspace = true }
aws-sdk-kms = "1.98.0"
hex = { workspace = true }
zeroize = { workspace = true }
rand = { workspace = true }
aes-gcm = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
time = { workspace = true }
uuid = { workspace = true }
dashmap = { workspace = true }

[features]
default = []

[[bin]]
name = "keymeld-enclave"
path = "src/main.rs"

[lints]
workspace = true
