[package]
name = "keymeld-gateway"
version = "0.1.0"
edition = "2021"
authors = ["tee8z@protonmail.com"]
description = "Gateway service for KeyMeld - manages distributed MuSig2 signing across AWS Nitro Enclaves"
license = "MIT"

[dependencies]
keymeld-core = { path = "../keymeld-core", features = ["gateway"] }
keymeld-sdk = { path = "../keymeld-sdk", features = ["openapi"] }
axum = { workspace = true, features = ["macros", "tokio", "http1"] }
axum-extra = { version = "0.12.1", features = ["typed-header"] }
tower-http = { workspace = true, features = ["compression-gzip", "decompression-gzip"] }
tokio = { workspace = true, features = ["full"] }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
toml = "0.9.11"
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
log = { workspace = true }
aws-config = { workspace = true }
aws-sdk-kms = "1.83.0"
secp256k1 = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
config = { workspace = true }
futures = { workspace = true }
dashmap = { workspace = true }
moka = { workspace = true }
uuid = { workspace = true }
time = { workspace = true }
sqlx = { workspace = true }
prometheus = { version = "0.14.0" }
lazy_static = { version = "1.4.0" }
utoipa = { version = "5.4.0", features = [
  "axum_extras",
  "time",
  "uuid",
  "macros",
  "non_strict_integers",
  "preserve_order",
  "preserve_path_order",
] }
utoipa-scalar = { version = "0.3.0", features = ["axum"] }

[dev-dependencies]
tempfile = "3.15.0"

[[bin]]
name = "keymeld-gateway"
path = "src/main.rs"

[lints]
workspace = true
