[package]
name = "keymeld-sdk"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
keymeld-core = { path = "../keymeld-core" }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
utoipa = { version = "5.4.0", features = ["uuid"], optional = true }

[features]
default = []
openapi = ["utoipa", "keymeld-core/openapi"]

[lints]
workspace = true
