[package]
name = "keymeld-sdk"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
# Use keymeld-core without default features (no networking) for WASM compatibility
keymeld-core = { path = "../keymeld-core", default-features = false }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }
zeroize = { workspace = true }
secp256k1 = { workspace = true }

reqwest = { workspace = true, default-features = false, features = ["json", "gzip"], optional = true }
tokio = { workspace = true, features = ["time"], optional = true }
flate2 = { version = "1.0", optional = true }
gloo-timers = { version = "0.3", features = ["futures"], optional = true }
utoipa = { version = "5.4.0", features = ["uuid"], optional = true }
dlctix = { git = "https://github.com/tee8z/dlctix", branch = "external-signing-api", optional = true }

[features]
default = ["client"]

# HTTP client support (works on both native and WASM via target_arch detection)
client = ["dep:reqwest", "dep:tokio", "dep:flate2", "dep:gloo-timers"]

# Types only (no HTTP client, for shared type definitions)
types-only = []

# OpenAPI schema generation
openapi = ["dep:utoipa", "keymeld-core/openapi"]

# DLC protocol utilities
dlctix = ["dep:dlctix"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
uuid = { workspace = true, features = ["v7", "serde"] }
getrandom = { version = "0.2" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
# uuid needs "js" feature for WASM random generation
uuid = { workspace = true, features = ["v7", "serde", "js"] }
# getrandom 0.2 (used by crypto deps) needs "js" feature for WASM
getrandom = { version = "0.2", features = ["js"] }
# getrandom 0.3 (used by rand 0.9) needs "wasm_js" feature for WASM
getrandom_03 = { package = "getrandom", version = "0.3", features = ["wasm_js"] }
wasm-bindgen = "0.2"

[lints]
workspace = true

[package.metadata.cargo-machete]
# These are WASM target-specific dependencies that enable proper random number
# generation and JS interop. cargo-machete doesn't detect their usage because
# they're only compiled for wasm32 targets.
ignored = ["getrandom", "getrandom_03", "wasm-bindgen"]
